--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,10 @@
     /* border: 5px solid green; */
 }
 
+.name_card1 {
+	background: transparent url(subwayQuantum3.png);
+}
+
 .name_container h1 {
 	font-size: 10rem;
 	color: #ffbf00;
@@ -174,7 +178,7 @@
 
 }
 
-#scrollButton {
+.scrollButton {
 	position: absolute;
 	bottom: 0;
 	font-size: 2rem;
@@ -188,13 +192,21 @@
     border-radius: 20px 20px 0 0;
 }
 
-#scrollButton:hover {
+.scroll2 {
+	border-radius: 40px 40px;
+	height: 10vh;
+	width: 30vw;
+	bottom: 4vh;
+	background-color: rgba(0,0,0, .8);
+}
+
+.scrollButton:hover {
 	color: #fff;
 	background-color: #ffbf00;
 	transition: all 1s ease;
 }
 
-#scrollButton:not(:hover) {
+.scrollButton:not(:hover) {
     color: #fff;
     transition: all 1s ease;
 }
