--- a/styles.css
+++ b/styles.css
@@ -183,22 +183,21 @@
 	bottom: 0;
 	font-size: 2rem;
     background-color: #521610;
-    height: 6vh;
-    width: 50vw;
+    height: 10vh;
+    /* width: 50vw; */
+	padding: 0vw 2vw;
     border-width: 1px;
     border-color: #fff;
     border: solid;
     /* top bottom, left right*/
-    border-radius: 20px 20px 0 0;
-}
-
-.scroll2 {
-	border-radius: 40px 40px;
-	height: 10vh;
-	width: 30vw;
+    border-radius: 40px 40px;
 	bottom: 4vh;
 	background-color: rgba(0,0,0, .8);
 }
+
+/* .scroll2 {
+	
+} */
 
 .scrollButton:hover {
 	color: #fff;
