change pic format

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,9 @@
 
 .name_card1 {
 	background: transparent url(subwayQuantum3.png);
+	background-position: center;
+	background-position-x: center;
+	background-position: calc(50% - 20px) 50%;
 }
 
 .name_container h1 {
